--- a/src/404.md
+++ b/src/404.md
@@ -1,10 +1,10 @@
 ---
-title: 404 - Page not found
-description: Page not found
+title: 404 - Stránka nenalezena
+description: Stránka nenalezena
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 
 # 404
 
-Page not found
+Stránka nenalezena
